2003-07-20  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: do not try to match two-char slurs \) \].

2003-07-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-sodipodi.scm (svg-header): Fix typo.

2003-07-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (error_log): use mktemp iso.  temp_dir. This
	fixes a security hole.

	* scripts/lilypond-book.py (original_dir): remove temp_dir

	* scm/document-translation.scm: use @code tags.

2003-07-20  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: do not try to match two-char slurs \( \[.

	* lilypond-mode.el: add a buffer-local post-command-hook to set
	context dependent syntax-table after each cursor event. Remove old
	stuff. XEmacs: turn on parenthesis highlighting in LilyPond-mode.

	* lilypond-indent.el: update comments.

	* Documentation/footer.html.in: add period.

2003-07-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in (Group): don't strip binary.

	* scm/document-translation.scm (document-property-operation): add
	@code{} tags.

	* VERSION (PACKAGE_NAME): release 1.7.27

	* config.make.in: add PAPER variable

	* buildscripts/new-chords.py (help): add help text

	* Documentation/user/introduction.itely (Typography and program
	architecture):  fixes.

	* Documentation/user/GNUmakefile (DVIPS_PAPERSIZE): set A4 paper
	for texinfo and dvips. This fixes problems with PDF output of the
	wrong size.

	* stepmake/stepmake/tex-rules.make ($(outdir)/%.ps): add
	DVIPS_PAPERSIZE variable

	* stepmake/stepmake/texinfo-rules.make ($(outdir)/%.dvi): add
	TEXINFO_PAPERSIZE variable 

2003-07-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-macros.mf: whoops: only draw lines for test situations.

	* mf/feta-toevallig.mf: lowres fixes.

2003-07-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* NEWS: Typo and fill-paragraph fixes.

	* flower/libc-extension.cc (lrint)[!HAVE_LRINT]: Use round () and
	cast #define.

	* configure.in: 
	* config.hh.in: Check for lrint.
